Setting up collaborators, showcase example for apps

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
 - name: Collaborators
   link: /collaborators/
-- name: Products 
-  link: /products/
+- name: Web Applications
+  link: /web_applications/
