--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ tagline: COVID-19 Statistics, Policy, Modeling & Epidemiology Collective
 email: anna.york@yale.edu
 description: >
   The C-SPEC Group Website 
-baseurl: ""
+baseurl: "https://ctesta01.github.io/cspec-group-website/"
 url: "https://ctesta01.github.io/cspec-group-website/"
 permalink: pretty
 #favicon: /path/to/favicon.png
